main admin works and tested (not too deep)